...
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-superuser-enabled"
        android:title="Developer Mode Enabled"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-show-update-target-options"
        android:title="Show Update Options Item"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-action-nav-enabled"
        android:title="Action Bar Enabled"/>
    <androidx.preference.ListPreference
...
