...
                    android:id="@+id/nav_btn_finish_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/nav_image_finish"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="CONTINUE"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:clickable="false"
                    android:layout_toStartOf="@+id/nav_image_finish"
                    android:layout_alignParentStart="true" />

...
